--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,6 +1,7 @@
 FROM ubuntu:alpine
-RUN apt update 
+RUN apt update -y
 RUN apt install –y apache2 
 RUN apt install –y apache2-utils 
 RUN apt clean 
-EXPOSE 80 CMD [“apache2ctl”, “-D”, “FOREGROUND”]
+EXPOSE 80 
+CMD [“apache2ctl”, “-D”, “FOREGROUND”]
