--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,39 @@
-name: Maven CI
+name: Deploy to ECR
 
 on:
+ 
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
+  
   build:
-
+    
+    name: Build Image
     runs-on: ubuntu-latest
 
+   
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+
+    - name: Check out code
+      uses: actions/checkout@v2
+    
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    
-    - name: compile
-      run: mvn clean install
-    
-    - name: package
-      run: mvn package
-    
-    - name: unit test
-      run: mvn test
-    
-    - name: working directory
-      run: pwd
-      
-    - name: list the current directory
-      run: ls -a
-    
-    - name: what is in target folder
+        aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: apache-registry
+        IMAGE_TAG: apache_image
       run: |
-        cd target
-        ls
-    - name: analize with sonarcloud
-      run: mvn verify sonar:sonar -Dsonar.projectKey=java-ci -Dsonar.organization=rajat-sharmaa -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-      
-    - name: docker image
-      uses: ripplr-io/docr-docker-publish@v1
-      with:
-       dockerfile: /apache/Dockerfile
-       docker_build_context: .
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG /apache
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
