--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,9 @@ on:
  
   push:
     branches: [ master ]
-
+    
+    paths: 
+      - /home/runner/work/java-app/java-app/apache/Dockerfile
 jobs:
   
   build:
@@ -35,7 +37,7 @@ jobs:
         ECR_REPOSITORY: apache-registry
         IMAGE_TAG: apache_image
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG /home/runner/work/java-app/java-app/apache/Dockerfile
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
        
