--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,67 @@
+name: Maven CI
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: compile
+      run: mvn clean install
+
+    - name: package
+      run: mvn package
+
+    - name: unit test
+      run: mvn test
+
+    - name: working directory
+      run: pwd
+
+    - name: list the current directory
+      run: ls -a
+
+    - name: what is in target folder
+      run: |
+        cd target
+        ls
+    - name: analize with sonarcloud
+      run: mvn verify sonar:sonar -Dsonar.projectKey=java-ci -Dsonar.organization=rajat-sharmaa -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
 name: Deploy to ECR
 
 on:
- 
+
   push:
     branches: [ master ]
-    
+
 jobs:
-  
+
   build:
-    
+
     name: Build Image
     runs-on: ubuntu-latest
 
-   
+
     steps:
 
     - name: Check out code
       uses: actions/checkout@v2
-    
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -37,4 +81,4 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
+
