--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,4 +1,4 @@
 FROM alpine:latest
-RUN apk update && apk upgrade && apk add tomcat9 
+RUN apk update && apk upgrade && apk add tomcat
 EXPOSE 8080
 CMD ["/opt/tomcat/bin/catalina.sh", "run"]
