--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,7 +1,8 @@
-FROM openjdk:16-jdk-buster
-USER root
-ADD apache-tomcat-10.0.5.tar.gz /opt/
-RUN mv /opt/apache-tomcat-10.0.5 /opt/tomcat
-RUN chmod 777 -R /opt/tomcat 
-EXPOSE 8080
-CMD ["/opt/tomcat/bin/catalina.sh","run"]
+FROM ubuntu:latest
+RUN apt-get -y update &amp;&amp; apt-get -y upgrade
+RUN apt-get -y install openjdk-8-jdk wget
+RUN apt-get -y install curl
+RUN mkdir /usr/local/tomcat
+RUN wget https://downloads.apache.org/tomcat/tomcat-10/v10.0.20/bin/apache-tomcat-10.0.20.tar.gz -O /tmp/tomcat.tar.gz
+RUN cd /tmp &amp;&amp; tar xvfz tomcat.tar.gz
+RUN cp -Rv /tmp/apache-tomcat-10.0.20/* /usr/local/tomcat/
