--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get -y install openjdk-8-jdk wget
 RUN apt-get -y install curl
 RUN mkdir /usr/local/tomcat
 RUN wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.22/bin/apache-tomcat-10.0.22.tar.gz -O /tmp/tomcat.tar.gz
-RUN cd /tmp &amp;&amp; tar xvfz tomcat.tar.gz
-RUN cp -Rv /tmp/apache-tomcat-10.0.20/* /usr/local/tomcat/
+RUN cd /tmp && tar xvfz tomcat.tar.gz
+RUN cp -Rv /tmp/apache-tomcat-10.0.22/* /usr/local/tomcat/
