--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -6,3 +6,4 @@ RUN mkdir /usr/local/tomcat
 RUN wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.22/bin/apache-tomcat-10.0.22.tar.gz -O /tmp/tomcat.tar.gz
 RUN cd /tmp && tar xvfz tomcat.tar.gz
 RUN cp -Rv /tmp/apache-tomcat-10.0.22/* /usr/local/tomcat/
+ADD java-tomcat-maven-example.war /usr/local/tomcat/webapps/
