--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,13 +35,14 @@ jobs:
     - name: list the current directory
       run: ls -a
       
-    - name: whats in .dockerignore
-      run: cat .dockerignore
-
     - name: what is in target folder
       run: |
         cd target
         ls
+        
+    - name: copying war file
+      run: cp /home/runner/work/java-app/java-app/target/java-tomcat-maven-example.war /home/runner/work/java-app/java-app/docker_deploy/test.war
+        
     - name: analize with sonarcloud
       run: mvn verify sonar:sonar -Dsonar.projectKey=java-ci -Dsonar.organization=rajat-sharmaa -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
