--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -1,7 +1,7 @@
-FROM ubuntu:latest
-RUN apt-get -y update && apt-get -y upgrade
-RUN apt-get -y install openjdk-8-jdk wget
-RUN apt-get -y install curl
+FROM alpine:latest
+RUN apk update && apk upgrade
+RUN apk add openjdk8
+RUN apk add curl
 RUN mkdir /usr/local/tomcat
 RUN wget https://dlcdn.apache.org/tomcat/tomcat-10/v10.0.22/bin/apache-tomcat-10.0.22.tar.gz -O /tmp/tomcat.tar.gz
 RUN cd /tmp && tar xvfz tomcat.tar.gz
