--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,6 @@ jobs:
         user: ubuntu
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         last_ssh: | 
-                curl ifconfig.me
-                sudo aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
+                sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
                 sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:latest
                 sudo docker run -itd -p 80:80 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry 
