--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,18 +80,18 @@ jobs:
         last_ssh: |
             sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
             sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image
-            sudo docker run -i -t -d -p 80:80 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image
+            sudo docker run -i -t -d -p 80:80 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image sh
             
     - name: deploy tomcat image to private ec2
       uses: appleboy/ssh-action@master
       with:
         host: 10.0.2.42
         username: ubuntu
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        key: ${{ secrets.KEY }}
         port: 22
         proxy_host: 18.208.163.244
         proxy_username: ubuntu
-        proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
+        proxy_key: ${{ secrets.KEY }}
         proxy_port: 22
         script: |
           sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
