--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,8 @@ jobs:
         user: ubuntu
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-            sudo aws configure set access_key_id "${{ secrets.ACCESS_KEY_ID }}"
-            sudo aws configure set secret_access_key "${{ secrets.SECRET_ACCESS_ID }}"
+            sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+            sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_ID }}"
             sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
             sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image
             sudo docker run -i -t -d -p 80:80 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image sh
@@ -96,8 +96,8 @@ jobs:
         proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
         proxy_port: 22
         script: |
-          sudo aws configure set access_key_id "${{ secrets.ACCESS_KEY_ID }}"
-          sudo aws configure set secret_access_key "${{ secrets.SECRET_ACCESS_ID }}"
+          sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_ID }}"
           sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
           sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/tomcat-registory:tomcat_image
           sudo docker run -i -t -d -p 80:80 323922828731.dkr.ecr.us-east-1.amazonaws.com/tomcat-registory:tomcat_image
