--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
             sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-            sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_ID }}"
+            sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
             sudo aws configure set region "us-east-1"
             sudo aws configure set output json
             sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
@@ -99,7 +99,7 @@ jobs:
         proxy_port: 22
         script: |
           sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_ID }}"
+          sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           sudo aws configure set region "us-east-1"
           sudo aws configure set output json
           sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
