--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,9 +73,9 @@ jobs:
     - name: Deploy apache to public instance
       uses: appleboy/ssh-action@master
       with:
-        host: 52.90.189.128
-        port: 22
-        user: ubuntu
+        host: ${{ secrets.PUBLIC_IP }}
+        port: ${{ secrets.PORT }}
+        user: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
             sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
@@ -89,14 +89,14 @@ jobs:
     - name: deploy tomcat image to private ec2
       uses: appleboy/ssh-action@master
       with:
-        host: 10.0.2.207
-        username: ubuntu
+        host: ${{ secrets.PRIVATE_IP}}
+        username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        proxy_host: 52.90.189.128
-        proxy_username: ubuntu
+        port: ${{ secrets.PORT }}
+        proxy_host: ${{ secrets.PUBLIC_IP }}
+        proxy_username: ${{ secrets.USERNAME }}
         proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-        proxy_port: 22
+        proxy_port: ${{ secrets.PORT }}
         script: |
           sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
           sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
