--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,10 +73,19 @@ jobs:
     - name: deploy apache image to private ec2
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.PRIVATE_IP}}
+        host: ${{ secrets.PUBLIC_IP}}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
+        script: |
+          sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          sudo aws configure set region "us-east-1"
+          sudo aws configure set output json
+          sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
+          sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image
+          sudo docker run -i -t -d -p 8080:8080 323922828731.dkr.ecr.us-east-1.amazonaws.com/apache-registry:apache_image
+
     
             
     - name: deploy tomcat image to private ec2
