--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         port: ${{ secrets.PORT }}
         script: |
+          sudo apt install awscli
           sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
           sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           sudo aws configure set region "us-east-1"
@@ -100,6 +101,7 @@ jobs:
         proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
         proxy_port: ${{ secrets.PORT }}
         script: |
+          sudo apt install awscli
           sudo aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
           sudo aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           sudo aws configure set region "us-east-1"
