--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest
-RUN apk update && apk upgrade && apk add apache2 && apk add apache2-proxy && rm -rf /etc/apache2/sites-available/000-default.conf
+RUN apk update && apk upgrade && apk add apache2 && apk add apache2-utils && apk add apache2-proxy && apk add apacge2-proxy-html && rm -rf /etc/apache2/sites-available/000-default.conf
 COPY /apache/000-default.conf /etc/apache2/sites-available/
 EXPOSE 80 
 CMD [ "/usr/sbin/httpd", "-D", "FOREGROUND"]
