--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,4 +112,4 @@ jobs:
           sudo docker rm tomcat
           sudo aws ecr get-login-password --region us-east-1 | sudo docker login --username AWS --password-stdin 323922828731.dkr.ecr.us-east-1.amazonaws.com
           sudo docker pull 323922828731.dkr.ecr.us-east-1.amazonaws.com/tomcat-registory:tomcat_image
-          sudo docker run -i -t -d -p 8080:8080 --name tomcat 323922828731.dkr.ecr.us-east-1.amazonaws.com/tomcat-registory:tomcat_image 
+          sudo docker run -d -p 8080:8080 --name tomcat 323922828731.dkr.ecr.us-east-1.amazonaws.com/tomcat-registory:tomcat_image 
